src/test/resources/testData/inspections/missingfile-win/createMissingIncludeFile.adoc
:var: ab

<error descr="include file not found: C:/src/ab/missing.adoc">include::{var}/missing.adoc[]</error>
